--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DEBUG=True
 ALLOWED_HOSTS=127.0.0.1,localhost
-SECRET_KEY=django-insecure-i34%*%ymgar!@@tplv(c%d*8t&-6dco4&jg12w_)zh@4sn=ig9
+SECRET_KEY=django-insecure-*y8=i0@)yi25(1m#j#s^gi9)xpn8)l30i0wqg5rfa^kmbph2xz
 CLOUDINARY_CLOUD_NAME=dk8s7tyro
 CLOUDINARY_API_KEY=942659945761928
 CLOUDINARY_API_SECRET=OalhI1_w0WjjbsG543vsdNQrCGA
