--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ __pycache__/
 *.py[cod]
 *.pyo
 *.pyd
-*.env
+.env
 .venv/
 venv/
 ENV/
@@ -11,7 +11,7 @@ ENV/
 *.log
 staticfiles/
 media/
-db.sqlite3
+
 # OS
 .DS_Store
 Thumbs.db
