--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
-DEBUG=True
-ALLOWED_HOSTS=127.0.0.1,localhost
+DEBUG=False
+ALLOWED_HOSTS=trading-website-2t52.onrender.com,127.0.0.1,localhost
 SECRET_KEY=django-insecure-*y8=i0@)yi25(1m#j#s^gi9)xpn8)l30i0wqg5rfa^kmbph2xz
 CLOUDINARY_CLOUD_NAME=dk8s7tyro
 CLOUDINARY_API_KEY=942659945761928
 CLOUDINARY_API_SECRET=OalhI1_w0WjjbsG543vsdNQrCGA
-
-
